# family-tree

./: .gitignore  .pylintrc  README.md  docker-compose.yml  main.py  main2.py  pyproject.toml  requirements.txt  test_app.py
app/: classes.py  exceptions.py  functions.py  strategies.py
